<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddClassroomActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_classroom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        android:titleTextColor="@color/black"
        app:title="@string/CreateClass">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        android:padding="5dp">

        <EditText
            android:id="@+id/etClassName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ClassName"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/etSection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Subject"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>