<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/classroomCardView"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/blue_mix_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/classroomName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/ClassName"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/more_option"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@null"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/more_vert"
                android:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/section"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:gravity="start|top"
            android:padding="5dp"
            android:text="@string/Section"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:padding="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_weight="1"
            android:text="@string/Name"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>