<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noticeCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/light_grey"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/noticeProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_boundary"
                android:clipToOutline="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noticeUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginStart="21dp"
                android:layout_marginTop="12dp"
                android:text="@string/UserName"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:padding="1dp"
                app:layout_constraintStart_toEndOf="@+id/noticeProfile"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noticeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginTop="2dp"
                android:text="@string/DefaultDate"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:padding="1dp"
                app:layout_constraintStart_toEndOf="@+id/noticeProfile"
                app:layout_constraintTop_toBottomOf="@+id/noticeUserName" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/noticeMore"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:background="@null"
                android:src="@drawable/more_vert"
                android:tint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/noticeDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:maxLines="4"
            android:ellipsize="end"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:id="@+id/noticeAttach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/noticeAttachImage"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/attach"
                android:scaleType="fitXY"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/noticeAttachText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Attachment"
                android:textSize="10sp" />

        </LinearLayout>

<!--        <View-->
<!--            android:id="@+id/divider2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="?android:attr/listDivider" />-->

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/light_grey"/>

        <TextView
            android:id="@+id/noticeComment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/AddClassComment"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>